删除不必要的配置文件，添加多个新文档和图片，更新导航栏和主题配置

--- a/docs/notes/doc/禾阅活动工作说明_对外版.md
+++ b/docs/notes/doc/禾阅活动工作说明_对外版.md
@@ -214,7 +214,7 @@ $\qquad$对于积极参与“禾阅”活动的同学，如果能对其阅读的
 ## 附录
    - 附录一：禾阅组工作邮箱：<span style="color: #90EE90;">heyue@spring.org.cn</span>
    - 附录二：禾阅记录样例
-    ![](HY_image\禾阅记录样例.png)
+    ![](image\禾阅记录样例.png)
    - 附录三：现参与禾阅活动的项目学校名单（共11所学校）
   
             贵州省贵阳市花溪区金竹民族学校
