--- a/docs/notes/activity/2022/20220828漂流本合集｜我们把理想与成长，欢声与笑语写进文字里.md
+++ b/docs/notes/activity/2022/20220828漂流本合集｜我们把理想与成长，欢声与笑语写进文字里.md
@@ -128,5 +128,6 @@ $\qquad$在本次漂流本活动中，春小禾们在漂流本上记录自己在
 
 ::: right
 ![](./漂流本合集｜我们把理想与成长，欢声与笑语写进文字里/禾小阅.svg){.full-width width="20%"}  
+[查看全部漂流本记录](/drift/2022/){target="_blank" rel="noreferrer"}  
 [原文链接](https://mp.weixin.qq.com/s/cJzqA2NHFEwqOdjY9BXqAA)  
 :::
