--- a/docs/notes/doc/禾阅活动工作说明_内部版.md
+++ b/docs/notes/doc/禾阅活动工作说明_内部版.md
@@ -22,9 +22,15 @@ $\qquad$为解决这一问题，我们决定撰写这份内部版本的禾阅活
 
 ## 禾阅组发展历史
 
-$\qquad$ **禾阅组** 前身是小导师团队支持组中的 **禾阅小组**。起因是2020年左右有人向春禾捐赠了一批图书，春禾为了不浪费这批图书，设计了名为 **“禾阅计划”** 的活动，并在小导师团队支持组设立了 **禾阅小组** 以负责 **“禾阅计划”** 活动的相关工作。在一两年的工作发展下，**“禾阅计划”** 相关工作逐渐陷入停摆状态。  
+##### **2018年**  
+$\qquad$春禾得到一批捐赠图书，并于同年12月启动了春禾社团阅读活动项目，对22所项目学校的春禾社团捐赠了图书。  
 
-$\qquad$ **2022年1月**的小导师冬令营会议上，经过讨论决定将**禾阅小组**从支持组中独立出来，作为小导师团队的第四个工作组并命名为**禾阅组**，由当时的 **禾阅小组** 负责人 **肖明雨** 担任 **禾阅组第一任组长** 。
+##### **2020年**  
+$\qquad$支持组建立禾阅计划工作小组，禾阅活动由此发起，并逐步筹备完善。  
+
+##### **2022年1月**  
+$\qquad$小导师冬令营会议上，经过讨论决定将禾阅小组从支持组中独立出来，作为小导师团队的第四个工作组并命名为禾阅组，由当时的禾阅小组负责人肖明雨担任禾阅组第一任组长。  
+
 
 ## 禾阅组历代组员
 
