--- a/docs/hy-record/修文一中/修文一中2024年禾阅记录.md
+++ b/docs/hy-record/修文一中/修文一中2024年禾阅记录.md
@@ -1,6 +1,6 @@
 ---
 title: 修文一中2024年禾阅记录
-createTime: 2025/02/4 21:34:33
+createTime: 2025/12/31
 permalink: /hy-record/修文一中2024年禾阅记录/
 tags:
     - 修文一中
